xserver-xorg-video-intel (2:2.13.0-2) UNRELEASED; urgency=low

  * Merge from experimental.
  * Lower build-dep on libdrm-dev from 2.4.22 to 2.4.21-1~squeeze3 since
    the latter contains the needed bits, making it possible to build
    within unstable.
  * Add patch to make configure.ac happy: libdrm-from-sid-is-ok.diff
  * Add README.Debian documenting the need for a kernel driver to handle
    modesetting.
  * Drop shadow-no-dri2.diff, obsoleted by upstream's 537e73f3.

 -- Cyril Brulebois <kibi@debian.org>  Mon, 01 Nov 2010 20:54:43 +0100

xserver-xorg-video-intel (2:2.13.0-1) experimental; urgency=low

  [ Sven Joachim ]
  * New upstream release.
  * Bump libdrm build-dependency to 2.4.22.

  [ Cyril Brulebois ]
  * Bump xutils-dev build-dependency to 1:7.5+4 (needed for xorg macros
    1.8).
  * Picked from unstable to avoid introducing back binaries on non-Linux
    architectures: UMS is gone, this means Linux-only.
  * Add myself to Uploaders.

 -- Cyril Brulebois <kibi@debian.org>  Sat, 02 Oct 2010 09:51:48 +0200

xserver-xorg-video-intel (2:2.12.0+shadow-2) unstable; urgency=low

  * UMS is gone, this means Linux-only (closes: 597845).

 -- Julien Cristau <jcristau@debian.org>  Thu, 23 Sep 2010 16:40:26 +0200

xserver-xorg-video-intel (2:2.12.0+shadow-1) unstable; urgency=low

  * Revert the come-back of UMS.  Update to upstream HEAD instead.
    Closes: #594623, #594338.
  * Dropping UMS means its bugs are irrelevant, so this closes: #570766,
    #594815.
  * Bump libdrm build-dep for DRM_MODE_CONNECTOR_eDP.
  * Don't enable DRI2 if the shadow option is on.
  * Use shadowfb on i8xx by default.  Hopefully closes: #570988, #572105,
    #576848, #592586, #593293.
  * New upstream doesn't assert() when running sm (closes: #593199).

 -- Julien Cristau <jcristau@debian.org>  Mon, 20 Sep 2010 19:44:14 +0200

xserver-xorg-video-intel (2:2.12.0+legacy1-1) unstable; urgency=low

  * Merge from people.freedesktop.org/~ickle/xf86-video-intel:legacy.