@@ -1,5 +1,6 @@
 xserver-xorg-video-intel (2:2.13.0-2) UNRELEASED; urgency=low
 
+  [ Cyril Brulebois ]
   * Merge from experimental.
   * Lower build-dep on libdrm-dev from 2.4.22 to 2.4.21-1~squeeze3 since
     the latter contains the needed bits, making it possible to build
@@ -8,6 +9,9 @@ xserver-xorg-video-intel (2:2.13.0-2) UNRELEASED; urgency=low
   * Add README.Debian documenting the need for a kernel driver to handle
     modesetting.
   * Drop shadow-no-dri2.diff, obsoleted by upstream's 537e73f3.
+
+  [ Julien Cristau ]
+  * Update i8xx-shadow.diff.
 
  -- Cyril Brulebois <kibi@debian.org>  Mon, 01 Nov 2010 20:54:43 +0100
 
